--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
             <div class="img">
-                <img src="/images/logo.jpg" alt="">
+                <img src="/images/Jump Forest.png" alt="">
             </div>
 
             <ul class="navbar" id="navbar">
@@ -158,7 +158,7 @@
                         </p>
 
                         <div class="img">
-                            <img src="/images/pexels-mali-maeder-102904.jpg" alt="">
+                            <img src="/images/nguyen-nhan-tan-pha-moi-truong.webp" alt="">
                             <p class="text-img">
                                 Các chất thải trực tiếp vứt ra nguồn nước (Ảnh minh họa)
                             </p>
@@ -178,7 +178,7 @@
 
                     <div class="box-text-img">
                         <div class="img">
-                            <img src="/images/pexels-mali-maeder-102904.jpg" alt="">
+                            <img src="/images/hinh5.jpg" alt="">
                             <p class="text-img">
                                 Khói từ các nhà máy thải ra môi trường (Ảnh minh họa)
                             </p>
@@ -221,7 +221,7 @@
                         </p>
 
                         <div class="img">
-                            <img src="/images/pexels-mali-maeder-102904.jpg" alt="">
+                            <img src="/images/hau-qua-cua-viec-pha-rung.webp" alt="">
                             <p class="text-img">
                                 Khu rừng bị phá hủy bởi con người(Ảnh minh họa)
                             </p>
@@ -276,7 +276,7 @@
                     </p>
 
                     <div class="img img-single">
-                        <img src="/images/pexels-mali-maeder-102904.jpg" alt="">
+                        <img src="/images/o-nhiem-rac-thai-nhua-dang-anh-huong-den-moi-truong-song-nhu-the-nao.jpg" alt="">
                         <p class="text-img">
                             Rác thải nhựa ở khắp mọi nơi(Ảnh minh họa)
                         </p>
@@ -297,7 +297,7 @@
                     </h2>
                     <div class="box-text-img">
                         <div class="img">
-                            <img src="/images/pexels-mali-maeder-102904.jpg" alt="">
+                            <img src="/images/Go green For Life - Vector Illustration (317571) _ Illustrations _ Design Bundles.webp" alt="">
                             <p class="text-img">
                                 Mô phỏng hình ảnh trồng cây gây rừng
                             </p>
@@ -354,7 +354,7 @@
                     </h5>
 
                     <div class="img-img">
-                        <img src="/images/pexels-mali-maeder-102904.jpg" alt="">
+                        <img src="/images/hocsinh.jpg" alt="">
                         <p class="text-img">
                             Buổi tuyên truyền về vai trò của động vật hoang dã(Ảnh minh họa)
                         </p>
