--- a/index.html
+++ b/index.html
@@ -295,21 +295,21 @@
                     <h2 class="header-info">
                         Chúng ta cần làm những gì để bảo vệ môi trường sống của các loại động vật hoang dã?
                     </h2>
-                    <div class="box-text-img">
-                        <div class="img">
-                            <img src="/images/Go green For Life - Vector Illustration (317571) _ Illustrations _ Design Bundles.webp" alt="">
-                            <p class="text-img">
-                                Mô phỏng hình ảnh trồng cây gây rừng
-                            </p>
-                        </div>
-                        <p class="text-info">
-                            Chúng ta cần thực hiện bảo vệ rừng với tình thần "Chung tay bảo vệ rừng, bảo vệ động vật
-                            hoang
-                            dã", chúng tôi cho rằng, mọi người dân phải có trách nhiệm bảo vệ nguồn động vật, thực vật
-                            rừng,
-                            đăc biệt là những loài động vật quý hiếm, đồng thời cùng với các cơ quan chức năng phát hiện
-                            kịp
-                            thời những hành vi tự tiện mang súng, các dụng cụ săn bắt động vật hoang dã;
+                    
+                    <p class="text-info2">
+                        Chúng ta cần thực hiện bảo vệ rừng với tình thần "Chung tay bảo vệ rừng, bảo vệ động vật
+                        hoang
+                        dã", chúng tôi cho rằng, mọi người dân phải có trách nhiệm bảo vệ nguồn động vật, thực vật
+                        rừng,
+                        đăc biệt là những loài động vật quý hiếm, đồng thời cùng với các cơ quan chức năng phát hiện
+                        kịp
+                        thời những hành vi tự tiện mang súng, các dụng cụ săn bắt động vật hoang dã;
+                    </p>
+
+                    <div class="img img-single">
+                        <img src="/images/Go green For Life - Vector Illustration (317571) _ Illustrations _ Design Bundles.webp" alt="">
+                        <p class="text-img">
+                            Mô phỏng hình ảnh trồng cây gây rừng
                         </p>
                     </div>
 
@@ -460,7 +460,11 @@
             </div>
 
             <div class="right-ft">
-                <img src="/images/footer.png">
+                <!-- <video controls>
+                    <source src="https://youtu.be/lAWoDclaW4Q" type="video/mp4">
+                </video> -->
+
+                <video src="/images/8699099150118264245.mp4"></video>
             </div>
         </footer>
     </div>
